sendmail fix, padding for mobile, machine picture for mobile, form fix + visibility option

--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -828,8 +828,8 @@ pre code {
 
 @media (min-width: 576px) {
   .container-fluid {
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
 
